Fixed height overflow which blocks buttons under the nav

--- a/Website-and-Backend/src/main/resources/public/stylescripts/style.css
+++ b/Website-and-Backend/src/main/resources/public/stylescripts/style.css
@@ -91,18 +91,27 @@ nav {
     position: fixed;
     width: 100vw;
     z-index: 1;
+    height: 0;
+    top:-200px;
 }
 
 nav .container {
     position: relative;
     display: flex;
     justify-content: flex-end;
-    padding: 36px 30px;
+    padding: 0 30px;
 }
 
 #navlinks {
+    position: fixed;
     display: flex;
     align-items: flex-start;
+    top: 36px;
+    height: 48px;
+}
+
+#logo {
+    top: 236px;
 }
 
 nav a {
@@ -122,11 +131,17 @@ nav a:hover {
     display: none;
 }
 
+#dropdownMenu > a {
+    z-index: 5;
+}
+
 .submenu {
     display: flex;
     flex-direction: column;
     position: relative;
     top: -10px;
+    height: 0;
+    overflow: hidden;
     opacity: 0;
     -webkit-transition: all 500ms cubic-bezier(0.500, 0.025, 0.500, 1.000);
     -moz-transition: all 500ms cubic-bezier(0.500, 0.025, 0.500, 1.000);
@@ -141,6 +156,7 @@ nav a:hover {
 
 .submenu.submenuClicked {
     top: 0;
+    height: 200px;
     opacity: 1;
     -webkit-transition: all 500ms cubic-bezier(0.500, 0.025, 0.500, 1.000);
     -moz-transition: all 500ms cubic-bezier(0.500, 0.025, 0.500, 1.000);
